--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "buefy": "^0.7.1",
     "vue": "^2.5.2",
     "vue-progressbar": "^0.7.3",
     "vue-router": "^3.0.1",
